--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,8 +1,7 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
   padding: 2rem;
   font-weight: normal;
 }
@@ -21,15 +20,14 @@ a,
   }
 }
 
+/* Fix: remove body flex layout on desktop to prevent black sides issue */
 @media (min-width: 1024px) {
-  body {
+  /* body {
     display: flex;
     place-items: center;
-  }
+  } */
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
 }
